--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <flink-version>1.18.1</flink-version>
     </properties>
 
     <repositories>
@@ -48,29 +49,29 @@
         <dependency>
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-streaming-java</artifactId>
-            <version>1.16.1</version>
+            <version>${flink-version}</version>
             <scope>provided</scope>
     </dependency>
         <dependency>
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-core</artifactId>
-            <version>1.16.1</version>
+            <version>${flink-version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-clients</artifactId>
-            <version>1.16.1</version>
+            <version>${flink-version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-java</artifactId>
-            <version>1.16.1</version>
+            <version>${flink-version}</version>
         </dependency>
         <dependency>
             <groupId>eu.europeana.metis</groupId>
             <artifactId>metis-enrichment-client</artifactId>
-            <version>9-SNAPSHOT</version>
+            <version>12-SNAPSHOT</version>
             <exclusions>
                 <exclusion>
                     <groupId>org.apache.maven.surefire</groupId>
