--- a/pom.xml
+++ b/pom.xml
@@ -152,6 +152,11 @@
         </dependency>
         <dependency>
             <groupId>eu.europeana.cloud</groupId>
+            <artifactId>ecloud-service-dps-api</artifactId>
+            <version>${ecloud.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>eu.europeana.cloud</groupId>
             <artifactId>ecloud-service-dps-storm-common</artifactId>
             <version>${ecloud.version}</version>
         </dependency>
