MET-5776 Prepared Flink OAI Job harvesting and saving records from an OAI source.

--- a/pom.xml
+++ b/pom.xml
@@ -183,7 +183,11 @@
             <artifactId>ecloud-service-dps-storm-common</artifactId>
             <version>${ecloud.version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>eu.europeana.cloud</groupId>
+            <artifactId>harvesting-commons</artifactId>
+            <version>${ecloud.version}</version>
+        </dependency>
     </dependencies>
 
 </project>
