--- a/paas/taskmanager-session-deployment.yaml
+++ b/paas/taskmanager-session-deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: flink-taskmanager
 spec:
-  replicas: 2
+  replicas: 3
   selector:
     matchLabels:
       app: flink
@@ -14,15 +14,6 @@ spec:
         app: flink
         component: taskmanager
     spec:
-      initContainers:
-        - name: copy-conf
-          image: registry.paas.psnc.pl/base/busybox:1.28
-          command: [ "/bin/sh","-c","cp /conf-copy/* /opt/flink/conf;" ]
-          volumeMounts:
-            - name: flink-config-volume
-              mountPath: /conf-copy
-            - name: conf-volume
-              mountPath: /opt/flink/conf
       containers:
         - name: taskmanager
           image: apache/flink:1.18.1-scala_2.12
@@ -37,11 +28,16 @@ spec:
             periodSeconds: 60
           volumeMounts:
             - name: flink-config-volume
-              mountPath: /conf-copy
-            - name: conf-volume
               mountPath: /opt/flink/conf
             - name: log-volume
               mountPath: /opt/flink/log
+          resources:
+            limits:
+              cpu: "2"
+              memory: 3048Mi
+            requests:
+              cpu: "1"
+              memory: 3048Mi
       volumes:
         - name: flink-config-volume
           configMap:
