--- a/paas/flink-client.yaml
+++ b/paas/flink-client.yaml
@@ -17,8 +17,9 @@ spec:
     spec:
       containers:
         - name: flink-client
-          image: apache/flink:1.18.1-scala_2.12
-          command: [ "/bin/sh","-c","while true; do sleep 60; done;" ]
+          image: registry.paas.psnc.pl/ecloud-poc/flink:1.18.1-java21_poc
+          imagePullPolicy: Always
+          command: [ "/bin/sh","-c","while true; do sleep 5; done;" ]
           volumeMounts:
             - name: deployments
               mountPath: /deployments
