--- a/paas/apache/mod_security.conf
+++ b/paas/apache/mod_security.conf
@@ -4,7 +4,7 @@
     SecRequestBodyAccess On
     SecRule REQUEST_HEADERS:Content-Type "text/xml" \
          "id:'200000',phase:1,t:none,t:lowercase,pass,nolog,ctl:requestBodyProcessor=XML"
-    SecRequestBodyLimit 13107200
+    SecRequestBodyLimit 536870912
     SecRequestBodyNoFilesLimit 131072
     SecRequestBodyInMemoryLimit 131072
     SecRequestBodyLimitAction Reject
@@ -52,5 +52,6 @@
 	IncludeOptional modsecurity.d/*.conf
 	IncludeOptional modsecurity.d/activated_rules/*.conf
 	IncludeOptional modsecurity.d/local_rules/*.conf
-    
+
+  SecRuleRemoveById 200003
 </IfModule>
