MET-5812 Added persistent directory for uploaded jars in the job-manager, added jobs configuration directory based on config map.

--- a/paas/flink-client.yaml
+++ b/paas/flink-client.yaml
@@ -25,9 +25,14 @@ spec:
               mountPath: /deployments
             - name: log-volume
               mountPath: /opt/flink/log
+            - name: jobs-config
+              mountPath: /jobs-config
       volumes:
         - name: deployments
           persistentVolumeClaim:
             claimName: deployments
         - emptyDir: { }
           name: log-volume
+        - secret:
+            secretName: jobs-config
+          name: jobs-config
