--- a/paas/jobmanager-session-deployment-non-ha.yaml
+++ b/paas/jobmanager-session-deployment-non-ha.yaml
@@ -36,6 +36,10 @@ spec:
               mountPath: /opt/flink/conf
             - name: log-volume
               mountPath: /opt/flink/log
+            - name: jobs-config
+              mountPath: /jobs-config
+            - name: web-upload
+              mountPath: /web-upload
           resources:
             limits:
               cpu: "2"
@@ -57,3 +61,9 @@ spec:
           name: log-volume
         - emptyDir: { }
           name: conf-volume
+        - secret:
+            secretName: jobs-config
+          name: jobs-config
+        - name: web-upload
+          persistentVolumeClaim:
+            claimName: web-upload
