--- a/paas/jobmanager-session-deployment-non-ha.yaml
+++ b/paas/jobmanager-session-deployment-non-ha.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: jobmanager
-          image: registry.paas.psnc.pl/ecloud-poc/flink:1.18.1-java21_poc
+          image: registry.paas.psnc.pl/ecloud-poc/flink-node-poc
           imagePullPolicy: Always
           args: ["jobmanager"]
           ports:
