MET-5812 Increased diagnostic possibilities of Flink containers.

--- a/docker/flink-node/Dockerfile
+++ b/docker/flink-node/Dockerfile
@@ -23,4 +23,8 @@ RUN  /install.sh
 RUN apt-get update && apt-get install -y \
     zip \
     unzip \
+    lsof \
     && rm -rf /var/lib/apt/lists/*
+
+COPY jattach /usr/bin/
+RUN chmod 755 /usr/bin/jattach
