--- a/paas/flink-configuration-configmap.yaml
+++ b/paas/flink-configuration-configmap.yaml
@@ -14,7 +14,7 @@ data:
     jobmanager.memory.process.size: 1600m
     taskmanager.memory.process.size: 2728m
     parallelism.default: 2
-    env.java.opts.all: "--add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.time=ALL-UNNAMED"
+    env.java.opts.all: "--add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.time=ALL-UNNAMED --add-opens java.base/java.util.concurrent.atomic=ALL-UNNAMED"
     web.upload.dir: /web-upload
     jobstore.expiration-time: 172800
     jobstore.type: File
