MET-5876 Cleared, rebuilt dependencies. Now jar with the POC is attached in the docker image of the Flink node. So the poc code is not dynamically loaded and unloaded multiple time by FlinkUserCodeClassLoader.

--- a/pom.xml
+++ b/pom.xml
@@ -12,9 +12,10 @@
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <flink-version>1.18.1</flink-version>
+        <flink.version>1.18.1</flink.version>
         <ecloud.version>12-SNAPSHOT</ecloud.version>
         <metis.version>12-SNAPSHOT</metis.version>
+        <metis.normalization.version>13-SNAPSHOT</metis.normalization.version>
     </properties>
 
     <repositories>
@@ -53,6 +54,7 @@
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-slf4j-impl</artifactId>
             <version>2.22.1</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>commons-io</groupId>
@@ -63,24 +65,26 @@
         <dependency>
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-streaming-java</artifactId>
-            <version>${flink-version}</version>
+            <version>${flink.version}</version>
             <scope>provided</scope>
     </dependency>
         <dependency>
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-core</artifactId>
-            <version>${flink-version}</version>
+            <version>${flink.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-clients</artifactId>
-            <version>${flink-version}</version>
+            <version>${flink.version}</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-java</artifactId>
-            <version>${flink-version}</version>
+            <version>${flink.version}</version>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
@@ -92,12 +96,26 @@
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-streaming-scala_2.12</artifactId>
             <version>1.18.1</version>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-connector-cassandra_2.12</artifactId>
             <version>3.1.0-1.17</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.dropwizard.metrics</groupId>
+            <artifactId>metrics-core</artifactId>
+            <version>3.2.2</version>
+            <scope>compile</scope>
+            <exclusions>
+                <exclusion>
+                    <artifactId>slf4j-api</artifactId>
+                    <groupId>org.slf4j</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>io.netty</groupId>
@@ -125,12 +143,16 @@
                     <artifactId>org.apache.logging.log4j</artifactId>
                     <groupId>log4j-slf4j-impl</groupId>
                 </exclusion>
+                <exclusion>
+                    <artifactId>eu.europeana.metis</artifactId>
+                    <groupId>metis-dereference-common</groupId>
+                </exclusion>
             </exclusions>
         </dependency>
         <dependency>
             <groupId>eu.europeana.metis</groupId>
             <artifactId>metis-normalization</artifactId>
-            <version>${metis.version}</version>
+            <version>${metis.normalization.version}</version>
             <exclusions>
                 <exclusion>
                     <groupId>org.apache.maven.surefire</groupId>
@@ -145,8 +167,12 @@
                     <groupId>*</groupId>
                 </exclusion>
                 <exclusion>
-                    <artifactId>org.apache.logging.log4j</artifactId>
-                    <groupId>log4j-slf4j-impl</groupId>
+                    <groupId>org.apache.logging.log4j</groupId>
+                    <artifactId>log4j-slf4j-impl</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.apache.logging.log4j</groupId>
+                    <artifactId>log4j-slf4j2-impl</artifactId>
                 </exclusion>
             </exclusions>
         </dependency>
@@ -177,33 +203,138 @@
             <groupId>eu.europeana.cloud</groupId>
             <artifactId>ecloud-service-mcs-rest-client-java</artifactId>
             <version>${ecloud.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>eu.europeana.cloud</groupId>
+                    <artifactId>ecloud-common</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>eu.europeana.cloud</groupId>
+            <artifactId>ecloud-common</artifactId>
+            <version>${ecloud.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.springframework.security</groupId>
+                    <artifactId>*</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>eu.europeana.metis</groupId>
+                    <artifactId>*</artifactId>
+                </exclusion>
+
+            </exclusions>
+        </dependency>
+
+        <dependency>
+            <groupId>eu.europeana.cloud</groupId>
+            <artifactId>ecloud-service-commons</artifactId>
+            <version>${ecloud.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.springframework.security</groupId>
+                    <artifactId>*</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>eu.europeana.metis</groupId>
+                    <artifactId>*</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>eu.europeana.cloud</groupId>
+                    <artifactId>*</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>eu.europeana.cloud</groupId>
+            <artifactId>ecloud-service-dps-storm-common</artifactId>
+            <version>${ecloud.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.springframework.security</groupId>
+                    <artifactId>*</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>eu.europeana.metis</groupId>
+                    <artifactId>*</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>eu.europeana.cloud</groupId>
+                    <artifactId>*</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>eu.europeana.cloud</groupId>
             <artifactId>ecloud-service-dps-api</artifactId>
             <version>${ecloud.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>eu.europeana.metis</groupId>
+            <artifactId>metis-transformation-service</artifactId>
+            <version>${metis.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>eu.europeana.metis</groupId>
+            <artifactId>metis-validation-service</artifactId>
+            <version>${metis.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>eu.europeana.metis</groupId>
+            <artifactId>metis-media-service</artifactId>
+            <version>${metis.version}</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>org.springframework</artifactId>
+                    <groupId>*</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>org.springframework.security</artifactId>
+                    <groupId>*</groupId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
         <dependency>
             <groupId>eu.europeana.cloud</groupId>
-            <artifactId>ecloud-service-dps-storm-common</artifactId>
+            <artifactId>ecloud-service-dps-utils</artifactId>
             <version>${ecloud.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.springframework.security</groupId>
+                    <artifactId>*</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>eu.europeana.cloud</groupId>
+                    <artifactId>*</artifactId>
+                </exclusion>
+
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>eu.europeana.cloud</groupId>
-            <artifactId>harvesting-commons</artifactId>
+            <artifactId>ecloud-cassandra-connector</artifactId>
             <version>${ecloud.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>*</groupId>
+                    <artifactId>*</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>eu.europeana.cloud</groupId>
             <artifactId>ecloud-service-dps-storm-topologies-validation</artifactId>
             <version>${ecloud.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>*</groupId>
+                    <artifactId>*</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
-        <dependency>
-            <groupId>eu.europeana.cloud</groupId>
-            <artifactId>ecloud-service-dps-utils</artifactId>
-            <version>${ecloud.version}</version>
-        </dependency>
-
     </dependencies>
 
     <build>
