MET-5876 Repaired broken exclusions.

--- a/pom.xml
+++ b/pom.xml
@@ -132,16 +132,16 @@
                     <artifactId>*</artifactId>
                 </exclusion>
                 <exclusion>
-                    <artifactId>org.springframework</artifactId>
-                    <groupId>*</groupId>
+                    <groupId>org.springframework</groupId>
+                    <artifactId>*</artifactId>
                 </exclusion>
                 <exclusion>
-                    <artifactId>org.springframework.security</artifactId>
-                    <groupId>*</groupId>
+                    <groupId>org.springframework.security</groupId>
+                    <artifactId>*</artifactId>
                 </exclusion>
                 <exclusion>
-                    <artifactId>org.apache.logging.log4j</artifactId>
-                    <groupId>log4j-slf4j-impl</groupId>
+                    <groupId>org.apache.logging.log4j</groupId>
+                    <artifactId>log4j-slf4j-impl</artifactId>
                 </exclusion>
                 <exclusion>
                     <artifactId>eu.europeana.metis</artifactId>
@@ -159,12 +159,12 @@
                     <artifactId>*</artifactId>
                 </exclusion>
                 <exclusion>
-                    <artifactId>org.springframework</artifactId>
-                    <groupId>*</groupId>
+                    <groupId>org.springframework</groupId>
+                    <artifactId>*</artifactId>
                 </exclusion>
                 <exclusion>
-                    <artifactId>org.springframework.security</artifactId>
-                    <groupId>*</groupId>
+                    <groupId>org.springframework.security</groupId>
+                    <artifactId>*</artifactId>
                 </exclusion>
                 <exclusion>
                     <groupId>org.apache.logging.log4j</groupId>
@@ -186,16 +186,16 @@
                     <artifactId>*</artifactId>
                 </exclusion>
                 <exclusion>
-                    <artifactId>org.springframework</artifactId>
-                    <groupId>*</groupId>
+                    <groupId>org.springframework</groupId>
+                    <artifactId>*</artifactId>
                 </exclusion>
                 <exclusion>
-                    <artifactId>org.springframework.security</artifactId>
-                    <groupId>*</groupId>
+                    <groupId>org.springframework.security</groupId>
+                    <artifactId>*</artifactId>
                 </exclusion>
                 <exclusion>
-                    <artifactId>org.apache.logging.log4j</artifactId>
-                    <groupId>log4j-slf4j-impl</groupId>
+                    <groupId>org.apache.logging.log4j</groupId>
+                    <artifactId>log4j-slf4j-impl</artifactId>
                 </exclusion>
             </exclusions>
         </dependency>
@@ -287,12 +287,12 @@
             <version>${metis.version}</version>
             <exclusions>
                 <exclusion>
-                    <artifactId>org.springframework</artifactId>
-                    <groupId>*</groupId>
+                    <groupId>org.springframework</groupId>
+                    <artifactId>*</artifactId>
                 </exclusion>
                 <exclusion>
-                    <artifactId>org.springframework.security</artifactId>
-                    <groupId>*</groupId>
+                    <groupId>org.springframework.security</groupId>
+                    <artifactId>*</artifactId>
                 </exclusion>
             </exclusions>
         </dependency>
